@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.4 2018/07/28 14:40:52 brook Exp $
+# $NetBSD: Makefile,v 1.5 2019/07/31 20:51:22 brook Exp $
 
-CATEGORIES=	textproc
+CATEGORIES=	textproc R
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	${R_HOMEPAGE_BASE}/highr/
-COMMENT=	Syntax highlighting for R
-LICENSE=	gnu-gpl-v2 OR gnu-gpl-v3
+COMMENT=	Syntax highlighting for R source code
+LICENSE=	gnu-gpl-v1 OR gnu-gpl-v2 OR gnu-gpl-v3
 
 R_PKGNAME=	highr
-R_PKGVER=	0.6
+R_PKGVER=	0.8
+
+USE_LANGUAGES=	# none
 
 .include "../../math/R/Makefile.extension"
 .include "../../mk/bsd.pkg.mk"
