@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3209 2019/07/31 20:50:07 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3210 2019/07/31 20:51:22 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5166,3 +5166,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated security/R-digest to 0.6.20 [brook 2019-07-31]
 	Updated textproc/R-formatR to 1.7 [brook 2019-07-31]
 	Updated textproc/R-gsubfn to 0.7 [brook 2019-07-31]
+	Updated textproc/R-highr to 0.8 [brook 2019-07-31]
